# beta-parameterization

./: .gitignore  CMakeLists.txt  pyproject.toml
.github/workflows/: wheels.yml
include/: beta_parameterization.h  beta_parameterization.hpp
python/: pyproject.toml
python/beta_parameterization/: __init__.py  _cdefs.py  _libloader.py  api.py
python/tests/: test_api.py
src/: beta_parameterization_c_api_mod.f08  beta_parameterization_mod.f08  beta_parameterization_workers_mod.f08
tests/: beta_param_breakdown_test.f08  beta_param_com_test.f08  beta_param_core_test.f08  beta_param_error_test.f08  beta_param_golden_test.f08  beta_param_node_set_test.f08  c_api_smoke_test.cpp  golden_capture.f08  test_utils_mod.f08  thread_stress_test.cpp
