[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "beta-parameterization"
version = "2.2.0"
description = "Python bindings for the beta (Legendre) nuclear-shape parameterization library"
requires-python = ">=3.9"
dependencies = ["numpy>=1.21"]

[project.optional-dependencies]
test = ["pytest>=7"]

[tool.setuptools.packages.find]
where = ["."]
include = ["beta_parameterization*"]
